<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/percent_to_goal"
        android:id="@+id/percent_to_goal_textview"
        android:layout_margin="@dimen/list_margin"
        android:textSize="@dimen/list_size"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/items_to_goal"
        android:id="@+id/items_to_goal_textview"
        android:layout_margin="@dimen/list_margin"
        android:textSize="@dimen/list_size"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/items_to_tracking_goal"
        android:id="@+id/items_to_tracking_goal"
        android:layout_margin="@dimen/list_margin"
        android:textSize="@dimen/list_size"/>
</LinearLayout>